--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,23 @@
 development:
   adapter: mysql2
-  database: demo
+  database: devise
   pool: 5
-  username: username
-  password: password
+  username: root
+  password: vsspl
   timeout: 5000
 
 test:
   adapter: mysql2
-  database: demo
+  database: devise
   pool: 5
-  username: username
-  password: password
+  username: root
+  password: vsspl
   timeout: 5000
 
 production:
   adapter: mysql2
-  database: demo
+  database: devise
   pool: 5
-  username: username
-  password: password
+  username: root
+  password: vsspl
   timeout: 5000
